@@ -1,3 +1,7 @@
+Mon Aug  8 09:27:50 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* include/tds_sysdep_public.h.in win32/tds_sysdep_public.h:
+	- sync tds_sysdep_public
+
 Mon Aug  8 09:09:16 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/unittests/getdata.c: use malloc to catch memory errors
 
@@ -599,4 +603,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3335 2011/08/08 07:09:04 freddy77 Exp $
+$Id: ChangeLog,v 1.3336 2011/08/08 07:27:57 freddy77 Exp $
